testsuite/tests/typecheck/should_fail/UnliftedNewtypesConstraintFamily.stderr

UnliftedNewtypesConstraintFamily.hs:11:1: error:
    • Data family has non-TYPE
      and non-variable return kind ‘Constraint’
    • In the data family declaration for ‘D’
